--- a/Admin/Clients.html
+++ b/Admin/Clients.html
@@ -62,7 +62,7 @@
             <!-- Removed the Close Button for Mobile -->
             <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
             <nav class="space-y-2">
-                <a href="Admin Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
                 </a>
                 <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
@@ -128,14 +128,20 @@
                             <td class="p-3 border-b whitespace-nowrap">+966 500000000</td>
                             <td class="p-3 border-b whitespace-nowrap">الرياض</td>
                             <td class="p-3 border-b whitespace-nowrap">2023-10-01</td>
-                            <td class="p-3 border-b text-center">
+                            <td class="p-3 border-b text-center  flex flex-row gap-2">
                                 <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                     <i class="fas fa-trash"></i>
+                                </button>
+                                <button class="bg-green-500 text-white px-2 py-1 rounded-full hover:bg-green-600">
+                                    <i class="fas fa-phone"></i>
+                                </button>
+                                <button class="bg-green-700 text-white px-2 py-1 rounded-full hover:bg-green-800">
+                                    <i class="fa-brands fa-whatsapp"></i>
                                 </button>
                             </td>
                         </tr>
@@ -146,14 +152,20 @@
                             <td class="p-3 border-b whitespace-nowrap">+966 511111111</td>
                             <td class="p-3 border-b whitespace-nowrap">جدة</td>
                             <td class="p-3 border-b whitespace-nowrap">2023-09-15</td>
-                            <td class="p-3 border-b text-center">
+                            <td class="p-3 border-b text-center flex flex-row gap-2">
                                 <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                     <i class="fas fa-trash"></i>
+                                </button>
+                                <button class="bg-green-500 text-white px-2 py-1 rounded-full hover:bg-green-600">
+                                    <i class="fas fa-phone"></i>
+                                </button>
+                                <button class="bg-green-700 text-white px-2 py-1 rounded-full hover:bg-green-800">
+                                    <i class="fa-brands fa-whatsapp"></i>
                                 </button>
                             </td>
                         </tr>
@@ -164,14 +176,20 @@
                             <td class="p-3 border-b whitespace-nowrap">+966 522222222</td>
                             <td class="p-3 border-b whitespace-nowrap">الدمام</td>
                             <td class="p-3 border-b whitespace-nowrap">2023-08-20</td>
-                            <td class="p-3 border-b text-center">
+                            <td class="p-3 border-b text-center  flex flex-row gap-2">
                                 <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                     <i class="fas fa-edit"></i>
                                 </button>
                                 <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                     <i class="fas fa-trash"></i>
+                                </button>
+                                <button class="bg-green-500 text-white px-2 py-1 rounded-full hover:bg-green-600">
+                                    <i class="fas fa-phone"></i>
+                                </button>
+                                <button class="bg-green-700 text-white px-2 py-1 rounded-full hover:bg-green-8s00">
+                                    <i class="fa-brands fa-whatsapp"></i>
                                 </button>
                             </td>
                         </tr>
