--- a/Admin/NewOrder.html
+++ b/Admin/NewOrder.html
@@ -53,7 +53,7 @@
         <!-- Removed the Close Button for Mobile -->
         <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
         <nav class="space-y-2">
-            <a href="Admin Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
             </a>
             <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
