--- a/Admin/Categories.html
+++ b/Admin/Categories.html
@@ -9,6 +9,32 @@
     <style>
         body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
     </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const userId = localStorage.getItem("userId") || sessionStorage.getItem("userId");
+            const permissions = localStorage.getItem("permissions") || sessionStorage.getItem("permissions");
+            const token = localStorage.getItem("token") || sessionStorage.getItem("token");
+
+            if (!userId || !permissions || !token) {
+                window.location.href = "index.html";
+            } else {
+                const PermissionsArray = permissions.split('&');
+                if (!PermissionsArray.includes('gererDashboard')) document.getElementById('dashboard').remove();
+                if (!PermissionsArray.includes('gererCategories')){
+                    if (window.history.length > 1) {
+                        window.history.back();
+                    }else {
+                        window.location.href = "index.html";
+                    }
+                }
+                if (!PermissionsArray.includes('gererProducts')) document.getElementById('products').remove();
+                if (!PermissionsArray.includes('gererClients')) document.getElementById('clients').remove();
+                if (!PermissionsArray.includes('gererOrders')) document.getElementById('orders').remove();
+                // if (!PermissionsArray.includes('gererUsers')) document.getElementById('users').remove();
+                if (!PermissionsArray.includes('gererSettings')) document.getElementById('settings').remove();
+            }
+        })
+    </script>
 </head>
 <body class="bg-gray-100 text-black flex flex-col min-h-screen">
     <!-- Navbar -->
@@ -53,22 +79,22 @@
         <!-- Removed the Close Button for Mobile -->
         <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
         <nav class="space-y-2">
-            <a href="Dashboard.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="Dashboard.html" id="dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
             </a>
-            <a href="Orders.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="Orders.html" id="orders" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-shopping-cart"></i> الطلبات
             </a>
-            <a href="Clients.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="Clients.html" id="clients" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-users"></i> العملاء
             </a>
-            <a href="Products.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="Products.html" id="products" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-box"></i> المنتجات
             </a>
-            <a href="Categories.html" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="Categories.html" id="categories" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-list"></i> الفئات
             </a>
-            <a href="#settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+            <a href="#settings" id="settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                 <i class="fas fa-cog"></i> إعدادات
             </a>
         </nav>
