--- a/Admin/Dashboard.html
+++ b/Admin/Dashboard.html
@@ -10,29 +10,29 @@
         <style>
         body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
     </style>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
+        <script>
             const userId = localStorage.getItem("userId") || sessionStorage.getItem("userId");
             const permissions = localStorage.getItem("permissions") || sessionStorage.getItem("permissions");
-            const token = localStorage.getItem("token") || sessionStorage.getItem("token");
-
-            if (!userId || !permissions || !token) {
-                window.location.href = "index.html";
-            } else {
-                const PermissionsArray = permissions.split('&');
-                if (!PermissionsArray.includes('gererDashboard')) {
-                    if (window.history.length > 1) {
-                        window.history.back();
-                    }else { 
-                        window.location.href = "index.html";
+            let token = localStorage.getItem("token") || sessionStorage.getItem("token");
+            document.addEventListener("DOMContentLoaded", function () {
+            
+                if (!userId || !permissions || !token) {
+                    window.location.href = "index.html";
+                } else {
+                    const PermissionsArray = permissions.split('&');
+                    if (!PermissionsArray.includes('gererDashboard')) {
+                        if (window.history.length > 1) {
+                            window.history.back();
+                        }else { 
+                            window.location.href = "index.html";
+                        }
                     }
-                }
-                if (!PermissionsArray.includes('gererProducts')) document.getElementById('products').remove();
-                if (!PermissionsArray.includes('gererCategories')) document.getElementById('categories').remove();
-                if (!PermissionsArray.includes('gererClients')) document.getElementById('clients').remove();
-                if (!PermissionsArray.includes('gererOrders')) document.getElementById('orders').remove();
-                // if (!PermissionsArray.includes('gererUsers')) document.getElementById('users').remove();
-                if (!PermissionsArray.includes('gererSettings')) document.getElementById('settings').remove();
+                    if (!PermissionsArray.includes('gererProducts')) document.getElementById('products').remove();
+                    if (!PermissionsArray.includes('gererCategories')) document.getElementById('categories').remove();
+                    if (!PermissionsArray.includes('gererClients')) document.getElementById('clients').remove();
+                    if (!PermissionsArray.includes('gererOrders')) document.getElementById('orders').remove();
+                    // if (!PermissionsArray.includes('gererUsers')) document.getElementById('users').remove();
+                    if (!PermissionsArray.includes('gererSettings')) document.getElementById('settings').remove();
             }
         })
     </script>
@@ -85,26 +85,33 @@
         </nav>
 
         <!-- Sidebar -->
-        <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+        <div id="sidebar"
+            class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
             <!-- Removed the Close Button for Mobile -->
             <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
             <nav class="space-y-2">
-                <a href="Dashboard.html" id="dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Dashboard.html" id="dashboard"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-tachometer-alt"></i> الصفحة الرئيسية
                 </a>
-                <a href="Orders.html" id="orders" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Orders.html" id="orders"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-shopping-cart"></i> الطلبات
                 </a>
-                <a href="Clients.html" id="clients" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Clients.html" id="clients"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-users"></i> العملاء
                 </a>
-                <a href="Products.html" id="products" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Products.html" id="products"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-box"></i> المنتجات
                 </a>
-                <a href="Categories.html" id="categories" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="Categories.html" id="categories"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-list"></i> الفئات
                 </a>
-                <a href="#settings" id="settings" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
+                <a href="#settings" id="settings"
+                    class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
                     <i class="fas fa-cog"></i> إعدادات
                 </a>
             </nav>
@@ -113,7 +120,8 @@
         <!-- Main Content -->
         <div class="p-6 md:mr-64 mt-16"> <!-- Add margin-top for navbar -->
             <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
-                <i class="fas fa-tachometer-alt text-yellow-400"></i> الصفحة الرئيسية
+                <i class="fas fa-tachometer-alt text-yellow-400"></i> الصفحة
+                الرئيسية
             </h1>
             <div
                 class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
@@ -125,7 +133,8 @@
                             <p class="text-2xl font-bold">120</p>
                         </div>
                         <div class="bg-yellow-400 py-1.5 px-2 rounded-full">
-                            <i class="fas fa-shopping-cart text-white rounded-full"></i>
+                            <i
+                                class="fas fa-shopping-cart text-white rounded-full"></i>
                         </div>
                     </div>
                 </div>
@@ -138,7 +147,8 @@
                             <p class="text-2xl font-bold">$5,000</p>
                         </div>
                         <div class="bg-green-500 py-1.5 px-3 rounded-full">
-                            <i class="fas fa-dollar-sign text-white rounded-full"></i>
+                            <i
+                                class="fas fa-dollar-sign text-white rounded-full"></i>
                         </div>
                     </div>
                 </div>
