--- a/Admin/Products.html
+++ b/Admin/Products.html
@@ -158,11 +158,11 @@
                         </td>
                         <td class="p-3 border-b whitespace-nowrap">2023-10-01</td>
                         <td class="p-3 border-b whitespace-nowrap">العناية بالشعر</td>
-                        <td class="p-3 border-b text-center">
-                            <button onclick="openUpdateModal('كريم للشعر', 50, '$20.00', 'active', '2023-10-01', 'العناية بالشعر', '../product1.jpg')" class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                        <td class="p-3 border-b text-center  flex flex-row gap-2">
+                            <button onclick="openUpdateModal('كريم للشعر', 50, '$20.00', 'active', '2023-10-01', 'العناية بالشعر', '../product1.jpg')" class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                 <i class="fas fa-edit"></i> 
                             </button>
-                            <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                            <button class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                 <i class="fas fa-trash"></i> 
                             </button>
                         </td>
@@ -185,11 +185,11 @@
                         </td>
                         <td class="p-3 border-b whitespace-nowrap">2023-09-25</td>
                         <td class="p-3 border-b whitespace-nowrap">العناية بالجسم</td>
-                        <td class="p-3 border-b text-center">
-                            <button onclick="openUpdateModal('كريم للجسم', 30, '$15.00', 'active', '2023-09-25', 'العناية بالجسم', '../product2.jpg')" class="bg-blue-500 text-white px-2 py-1 rounded-lg hover:bg-blue-600">
+                        <td class="p-3 border-b text-center  flex flex-row gap-2">
+                            <button onclick="openUpdateModal('كريم للجسم', 30, '$15.00', 'active', '2023-09-25', 'العناية بالجسم', '../product2.jpg')" class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
                                 <i class="fas fa-edit"></i> 
                             </button>
-                            <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600">
+                            <button class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
                                 <i class="fas fa-trash"></i> 
                             </button>
                         </td>
